# gattc_multi_connect

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  cmdRxUnpack.c  gattc_multi_connect.c  idf_component.yml  kaiji_gif.c  uart.c  uart.h
main/LCD_Driver/: ST7789.c
main/LVGL_Driver/: LVGL_Driver.c
main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
