idf_component_register(SRCS "uart.c" 
                            "gattc_multi_connect.c"
                            "cmdRxUnpack.c"
                            "LCD_Driver/Vernon_ST7789T/Vernon_ST7789T.c" 
                              "LCD_Driver/ST7789.c"
                              "LVGL_Driver/LVGL_Driver.c"
                              "LVGL_UI/LVGL_Example.c"
                              "SD_Card/SD_MMC.c"
                              "RGB/RGB.c"
                              "Wireless/Wireless.c"
                              "kaiji_gif.c"
                    INCLUDE_DIRS "."
                                "./LCD_Driver/Vernon_ST7789T" 
                                "./LCD_Driver" 
                                "./LVGL_Driver" 
                                "./LVGL_UI" 
                                "./SD_Card"
                                "./RGB" 
                                "./Wireless"
                    )

                   